[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/ui/button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ui/ui.gd" type="Script" id=2]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=3]
[ext_resource path="res://scene/ui/options.tscn" type="PackedScene" id=4]

[node name="ui" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -147.0
margin_right = 217.0
margin_bottom = 146.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="list" type="VBoxContainer" parent="panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.5
margin_top = -165.5
margin_right = 166.5
margin_bottom = 166.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Label" parent="panel/list"]
margin_top = 92.0
margin_right = 332.0
margin_bottom = 111.0
text = "Game Paused"
align = 1
autowrap = true

[node name="continue" parent="panel/list" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 115.0
margin_right = 332.0
margin_bottom = 154.0
focus_neighbour_top = NodePath("../exit")
focus_neighbour_bottom = NodePath("../options")
focus_next = NodePath("../options")
focus_previous = NodePath("../exit")
text = "Continue"

[node name="options" parent="panel/list" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 158.0
margin_right = 332.0
margin_bottom = 197.0
focus_neighbour_top = NodePath("../continue")
focus_neighbour_bottom = NodePath("../exit")
focus_next = NodePath("../exit")
focus_previous = NodePath("../continue")
text = "Options"

[node name="exit" parent="panel/list" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 201.0
margin_right = 332.0
margin_bottom = 240.0
focus_neighbour_top = NodePath("../options")
focus_neighbour_bottom = NodePath("../continue")
focus_next = NodePath("../continue")
focus_previous = NodePath("../options")
text = "Exit"

[node name="options" parent="." instance=ExtResource( 4 )]
visible = false

[node name="tween" type="Tween" parent="."]
[connection signal="visibility_changed" from="." to="." method="_on_ui_visibility_changed"]
[connection signal="pressed" from="panel/list/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="panel/list/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="panel/list/exit" to="." method="_on_exit_pressed"]
[connection signal="visibility_changed" from="options" to="." method="_on_options_visibility_changed"]
